--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ textarea{
     font-size: large;
     border-radius: 10px;
     padding: 1vw;
+    width: 34vw;
 
 }  
 
@@ -174,8 +175,9 @@ img{
 }
 .all-questions{
     margin: 2vh;
-    height: 64.2vh;
+    height: 60vh;
     overflow-y: auto;
+    border-bottom: solid black 1px;
 }
 .all-questions:hover::-webkit-scrollbar-thumb{
     visibility: visible;
@@ -185,4 +187,25 @@ img{
 }
 .shout-out-container{
     overflow-y: auto;
+}
+.top-asked-heading{
+    background-color: black;
+    border-radius: 10px;
+    margin: 1vh;
+}
+.question{
+    border-radius: 6px;
+    min-height: 6vh;
+    height: fit-content;
+    margin: 1vh;
+    background-color: rgb(228, 231, 231);
+}
+button{
+    height: 4vh;
+    margin: 1vh;
+    padding: 1vh;
+    cursor: pointer;
+}
+.shout-out-header a:hover{
+background-color: black;
 }
