--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ img{
     padding: 0.5vw;
 }
 .q{
-
+/* border-bottom:solid #042544 0.5px; */
 }
 span{
     color: #7b7b7e;
@@ -236,9 +236,37 @@ background-color: black;
     margin: 0.5vh;
 }
 .mssg{
-    background-color: #f0f0f3;
+    background-color: #dddddf;
     font-size: medium;
     margin: 0.5vh;
     border-radius: 5px;
-    padding-left: 0.4vw;
+    padding: 0.4vw;
+}
+.respond{
+    display: flex;
+}
+.rating{
+    margin-top: 1.3vh;
+}
+.answer{
+    font-size: large;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-radius: 5px;
+    border: #7b7b7e solid 0.5px;
+    padding: 5px;
+    width: 34vw;
+    height: 3.5vh;
+}
+.comment{
+    background-color: #fafafa;
+    font-size: small;
+    padding: 0.7vh;
+    border-radius: 8px;
+    margin-left: 9vw;
+    width: 46.5vw;
+    text-align: left;
+    display: none;
+}
+#comment{
+    font-size: medium;
 }
